--- a/Portfolio/Views/Contact/Contact.cshtml
+++ b/Portfolio/Views/Contact/Contact.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rob Moore</title>
+    <title>Rob Moore Contact</title>
     <link rel="stylesheet" href="~/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -25,21 +25,34 @@
             </ul>
         </div>
     </nav>
-
-    <h1 class="text-center mb-2">About Me</h1>
+    
+    <h1 class="text-center">Contact Me!</h1>
     <div class="container">
-        <div class="row mt-2">
-            <div class="col">
-                <div class="d-flex justify-content-center">
-                    <img src="/img/rob-moore.jpg" alt="Rob Moore">
+        <form action="/contact">
+            <div class="row">
+                <div class="col">
+                    <div class="form-group row">
+                        <label for="userName">Name</label>
+                        <input type="text" class="form-control" id="userName" placeholder="Your Name">
+                    </div>
+                    <div class="form-group row">
+                        <label for="userEmail">Email</label>
+                        <input type="email" class="form-control" id="userEmail" placeholder="Your Email">
+                    </div>
                 </div>
-                <p class="d-flex justify-content-center">Rob Moore</p>
-                <p class="d-flex justify-content-center">I like Stuff!</p>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="userMessage">Message</label>
+                        <textarea class="form-control" name="userMessage" id="userMessage" rows="5"></textarea>
+                        
+                    </div>
+                    <div class="form-group">
+                        <label for="submit"></label>
+                        <input type="submit" value="Submit" class="btn btn-primary">
+                    </div>
+                </div>
             </div>
-            <div class="col align-self-center">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum id vel, adipisci laborum illo optio suscipit ad iusto non odit? Officia quisquam dolore similique repudiandae deserunt? Nobis quidem veniam porro.</p>
-            </div>
-        </div>
+        </form>
     </div>
 </body>
 </html>
