Updated DojoSurvey with a ModelView

--- a/DojoSurvey/Views/Index/Index.cshtml
+++ b/DojoSurvey/Views/Index/Index.cshtml
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,14 +10,14 @@
 </head>
 <body>
     <div class="wrapper">
-        <form action="result" method="POST">
+        <form action="survey" method="POST">
             <div class="nameLine">
                 <label for="name">Your Name:</label>
-                <input type="text" name="name" placeholder="Enter your name">
+                <input type="text" name="Name" placeholder="Enter your name">
             </div>
             <div class="dojoLocation">
                 <label for="location">Location:</label>
-                <select name="location" >
+                <select name="Location" >
                     <option value="Arlington, VA">Arlington, VA</option>
                     <option value="Bellevue, WA">Bellevue, WA</option>
                     <option value="Boise, ID">Boise, ID</option>
@@ -31,7 +33,7 @@
             </div>
             <div class="favLanguage">
                 <label for="language">Favorite Language:</label>
-                <select name="language">
+                <select name="Language">
                     <option value="Java">Java</option>
                     <option value="Python">Python</option>
                     <option value="C#/.NET">C#/.NET</option>
@@ -41,7 +43,7 @@
             </div>
             <div class="comment">
                 <label for="comment">Comment (optional):</label><br />
-                <textarea type="text" name="comment" id="userComments"></textarea>
+                <textarea type="text" name="Comment" id="userComments"></textarea>
             </div>
             <div class="button">
                 <input id="submit" type="submit" value="Submit">
