--- a/DojoSurvey/Views/Index/Result.cshtml
+++ b/DojoSurvey/Views/Index/Result.cshtml
@@ -1,3 +1,5 @@
+@model DojoSurvey.Models.Survey
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,19 +14,19 @@
         <div id="display">
             <div class="displayName">
                 <h3>Name:</h3>
-                <h3>@ViewBag.Name</h3>
+                <h3>@Model.Name</h3>
             </div>
             <div class="displayLocation">
                 <h3>Dojo Location:</h3>
-                <h3>@ViewBag.Location</h3>
+                <h3>@Model.Location</h3>
             </div>
             <div class="displayLanguage">
                 <h3>Favorite Language:</h3>
-                <h3>@ViewBag.Language</h3>
+                <h3>@Model.Language</h3>
             </div>
             <div class="displayComment">
                 <h3>Comment:</h3>
-                <h3>@ViewBag.Comment</h3>
+                <h3>@Model.Comment</h3>
             </div>
         </div>
         <div class="button">
