--- a/CRUDelicious/Views/Home/Index.cshtml
+++ b/CRUDelicious/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<Dish>
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -9,13 +10,13 @@
             <p>Check out some recent dishes!</p><hr>
         </div>
         <div class="col-4">
-            <a href="new"><u>Add a Dish</u></a>
+            <a href="dish/new"><u>Add a Dish</u></a>
         </div>
     </div>
     <div class="row mt-4">
         <div class="col-8">
             @{
-                foreach(Dish d in ViewBag.AllDishes)
+                foreach(Dish d in Model)
                 {
                     <p><a href="@d.DishId">@d.Name</a> by @d.Chef</p>
                 }
