--- a/BeltReviewLecture/Views/Home/Index.cshtml
+++ b/BeltReviewLecture/Views/Home/Index.cshtml
@@ -1,8 +1,54 @@
-﻿@{
+﻿@model User
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="row">
+    <div class="col-sm-5">
+        <h1>Register</h1>
+        <form asp-action="Register" method="post">
+            <div class="form-group">
+                <label for="RealName">Your Name</label>
+                <input asp-for="RealName" class="form-control"/>
+                <span asp-validation-for="RealName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label for="UserName">Username</label>
+                <input asp-for="UserName" class="form-control"/>
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label for="Email">Email</label>
+                <input asp-for="Email" class="form-control"/>
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label for="DoB">Date of Birth</label>
+                <input asp-for="DoB" class="form-control"/>
+                <span asp-validation-for="DoB" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label for="Password">Password</label>
+                <input asp-for="Password" class="form-control"/>
+                <small>Password must be at least 8 characters</small>
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label for="Confirm">Confirm Password</label>
+                <input asp-for="Confirm" class="form-control"/>
+                <span asp-validation-for="Confirm" class="text-danger"></span>
+            </div>
+            <input type="submit" value="Submit" class="btn btn-primary">
+        </form>
+    </div>
+    <div class="col-sm-2"></div>
+    <div class="col-sm-5">
+        <h2>Login</h2>
+        <partial name="_login" />
+    </div>
+    </div>
 </div>
+
